apps/tauri/src-tauri/native/sealed_kernel_bridge.h

typedef struct sealed_kernel_bridge_session sealed_kernel_bridge_session;
typedef struct sealed_kernel_bridge_state_snapshot {
  int32_t session_state;
  int32_t index_state;
  uint64_t indexed_note_count;
  uint64_t pending_recovery_ops;
} sealed_kernel_bridge_state_snapshot;
char* sealed_kernel_bridge_info_json(void);
void sealed_kernel_bridge_free_string(char* value);
void sealed_kernel_bridge_free_bytes(uint8_t* value);
void sealed_kernel_bridge_free_float_array(float* value);
int32_t sealed_kernel_bridge_open_vault_utf8(
    const char* vault_path_utf8,
    sealed_kernel_bridge_session** out_session,
    char** out_error);
int32_t sealed_kernel_bridge_validate_vault_root_utf8(
    const char* vault_path_utf8,
    char** out_error);
void sealed_kernel_bridge_close(sealed_kernel_bridge_session* session);
int32_t sealed_kernel_bridge_get_state(
    sealed_kernel_bridge_session* session,
    sealed_kernel_bridge_state_snapshot* out_state,
    char** out_error);
int32_t sealed_kernel_bridge_get_note_catalog_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_note_query_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_vault_scan_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_query_notes_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_notes_filtered_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    const char* ignored_roots_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_file_tree_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_query_file_tree_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    const char* ignored_roots_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_filter_supported_vault_paths_filtered_json(
    const char* changed_paths_lf_utf8,
    const char* ignored_roots_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_read_note_json(
    sealed_kernel_bridge_session* session,
    const char* rel_path_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_read_vault_file_bytes(
    sealed_kernel_bridge_session* session,
    const char* host_path_utf8,
    uint64_t host_path_size,
    uint8_t** out_bytes,
    uint64_t* out_size,
    char** out_error);
int32_t sealed_kernel_bridge_write_note_json(
    sealed_kernel_bridge_session* session,
    const char* rel_path_utf8,
    const char* content_utf8,
    uint64_t content_size,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_search_notes_json(
    sealed_kernel_bridge_session* session,
    const char* query_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_search_note_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_backlink_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_tag_catalog_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_tag_note_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_tag_tree_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_graph_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_query_tags_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_tag_tree_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_tag_notes_json(
    sealed_kernel_bridge_session* session,
    const char* tag_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_graph_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_backlinks_json(
    sealed_kernel_bridge_session* session,
    const char* rel_path_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_chem_spectra_json(
    sealed_kernel_bridge_session* session,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_chem_spectra_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_get_chem_spectrum_json(
    sealed_kernel_bridge_session* session,
    const char* attachment_rel_path_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_query_note_chem_spectrum_refs_json(
    sealed_kernel_bridge_session* session,
    const char* note_rel_path_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_note_chem_spectrum_refs_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_query_chem_spectrum_referrers_json(
    sealed_kernel_bridge_session* session,
    const char* attachment_rel_path_utf8,
    uint64_t limit,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_get_chem_spectrum_referrers_default_limit(
    uint64_t* out_limit,
    char** out_error);
int32_t sealed_kernel_bridge_parse_spectroscopy_text_json(
    const char* raw_utf8,
    uint64_t raw_size,
    const char* extension_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_compute_truth_diff_json(
    const char* prev_content,
    uint64_t prev_size,
    const char* curr_content,
    uint64_t curr_size,
    const char* file_extension_utf8,
    char** out_json,
    char** out_error);
int32_t sealed_kernel_bridge_build_semantic_context_text(
    const char* content,
    uint64_t content_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_derive_file_extension_from_path_text(
    const char* path_utf8,
    uint64_t path_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_normalize_vault_relative_path_text(
    const char* rel_path_utf8,
    uint64_t rel_path_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_derive_note_display_name_from_path_text(
    const char* path_utf8,
    uint64_t path_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_normalize_database_column_type_text(
    const char* column_type_utf8,
    uint64_t column_type_size,
    char** out_text,
    char** out_error);
int32_t sealed_kernel_bridge_get_semantic_context_min_bytes(
    uint64_t* out_bytes,
    char** out_error);
int32_t sealed_kernel_bridge_get_ai_chat_timeout_secs(
    uint64_t* out_secs,
    char** out_error);