apps/tauri/src-tauri/src/sealed_kernel/ffi.rs


extern "C" {
    pub(super) fn sealed_kernel_bridge_info_json() -> *mut c_char;
    pub(super) fn sealed_kernel_bridge_free_string(value: *mut c_char);
    pub(super) fn sealed_kernel_bridge_free_bytes(value: *mut u8);
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_free_float_array(value: *mut c_float);
    pub(super) fn sealed_kernel_bridge_open_vault_utf8(
        vault_path_utf8: *const c_char,
        out_session: *mut *mut SealedKernelBridgeSession,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_validate_vault_root_utf8(
        vault_path_utf8: *const c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_close(session: *mut SealedKernelBridgeSession);
    pub(super) fn sealed_kernel_bridge_get_state(
        session: *mut SealedKernelBridgeSession,
        out_state: *mut SealedKernelBridgeStateSnapshot,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_note_catalog_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_note_query_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_vault_scan_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_notes_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_notes_filtered_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        ignored_roots_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_changed_notes_json(
        session: *mut SealedKernelBridgeSession,
        changed_paths_lf_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_file_tree_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_file_tree_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        ignored_roots_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_filter_supported_vault_paths_filtered_json(
        changed_paths_lf_utf8: *const c_char,
        ignored_roots_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_read_note_json(
        session: *mut SealedKernelBridgeSession,
        rel_path_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_read_first_changed_markdown_note_content_text(
        session: *mut SealedKernelBridgeSession,
        changed_paths_lf_utf8: *const c_char,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_read_vault_file_bytes(
        session: *mut SealedKernelBridgeSession,
        host_path_utf8: *const c_char,
        host_path_size: u64,
        out_bytes: *mut *mut u8,
        out_size: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_write_note_json(
        session: *mut SealedKernelBridgeSession,
        rel_path_utf8: *const c_char,
        content_utf8: *const c_char,
        content_size: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_search_notes_json(
        session: *mut SealedKernelBridgeSession,
        query_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_search_note_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_backlink_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_tag_catalog_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_tag_note_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_tag_tree_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_graph_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_tags_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_tag_tree_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_tag_notes_json(
        session: *mut SealedKernelBridgeSession,
        tag_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_graph_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_enriched_graph_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_backlinks_json(
        session: *mut SealedKernelBridgeSession,
        rel_path_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_chem_spectra_json(
        session: *mut SealedKernelBridgeSession,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_chem_spectra_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_chem_spectrum_json(
        session: *mut SealedKernelBridgeSession,
        attachment_rel_path_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_note_chem_spectrum_refs_json(
        session: *mut SealedKernelBridgeSession,
        note_rel_path_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_note_chem_spectrum_refs_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_query_chem_spectrum_referrers_json(
        session: *mut SealedKernelBridgeSession,
        attachment_rel_path_utf8: *const c_char,
        limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_chem_spectrum_referrers_default_limit(
        out_limit: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_parse_spectroscopy_text_json(
        raw_utf8: *const c_char,
        raw_size: u64,
        extension_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_compute_truth_diff_json(
        prev_content: *const c_char,
        prev_size: u64,
        curr_content: *const c_char,
        curr_size: u64,
        file_extension_utf8: *const c_char,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_semantic_context_text(
        content: *const c_char,
        content_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_derive_file_extension_from_path_text(
        path_utf8: *const c_char,
        path_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_normalize_vault_relative_path_text(
        rel_path_utf8: *const c_char,
        rel_path_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_derive_note_display_name_from_path_text(
        path_utf8: *const c_char,
        path_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    #[cfg(test)]
    pub(super) fn sealed_kernel_bridge_normalize_database_column_type_text(
        column_type_utf8: *const c_char,
        column_type_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_normalize_database_json(
        json_utf8: *const c_char,
        json_size: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_paper_compile_plan_json(
        workspace_utf8: *const c_char,
        workspace_size: u64,
        template_utf8: *const c_char,
        template_size: u64,
        image_paths_utf8: *const *const c_char,
        image_path_sizes: *const u64,
        image_path_count: u64,
        csl_path_utf8: *const c_char,
        csl_path_size: u64,
        bibliography_path_utf8: *const c_char,
        bibliography_path_size: u64,
        resource_separator_utf8: *const c_char,
        resource_separator_size: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_default_paper_template(
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_summarize_paper_compile_log_json(
        log_utf8: *const c_char,
        log_size: u64,
        log_char_limit: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_normalize_pubchem_query_text(
        query_utf8: *const c_char,
        query_size: u64,
        out_text: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_build_pubchem_compound_info_json(
        query_utf8: *const c_char,
        query_size: u64,
        formula_utf8: *const c_char,
        formula_size: u64,
        molecular_weight: c_double,
        has_density: u8,
        density: c_double,
        property_count: u64,
        out_json: *mut *mut c_char,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_semantic_context_min_bytes(
        out_bytes: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
    pub(super) fn sealed_kernel_bridge_get_ai_chat_timeout_secs(
        out_secs: *mut u64,
        out_error: *mut *mut c_char,
    ) -> c_int;
